--- a/game.html
+++ b/game.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Store Template</title>
+    <title>Game Store</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         body {
             background-image: url("bg.png");
@@ -111,17 +112,6 @@
             color: #ff9900;
         }
 
-        .card-button {
-            background-color: #ff9900;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: bold;
-            color: white;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
         .footer {
             padding: 20px;
             background-color: rgba(0, 0, 0, 0.8);
@@ -146,6 +136,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Login/login.html">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cart.html">Cart</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -168,7 +161,6 @@
                             <h5 class="card-title">GTA 5</h5>
                             <p class="card-text">A story game with stunning graphics and immersive gameplay</p>
                             <p class="card-price">$15.99</p>
-                            <button class="card-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -179,7 +171,6 @@
                             <h5 class="card-title">Days Gone</h5>
                             <p class="card-text">A survival game with rich story and diverse characters</p>
                             <p class="card-price">$29.99</p>
-                            <button class="card-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -188,9 +179,8 @@
                         <img src="game3.jpg" class="card-img-top" alt="PUBG">
                         <div class="card-body">
                             <h5 class="card-title">PUBG</h5>
-                            <p class="card-text">A battle royale game with realistic physics </p>
-                            <p class="card-price">$9.99</p>
-                            <button class="card-button">Buy Now</button>
+                            <p class="card-text">A battle royale game with realistic physics</p>
+                            <p class="card-price">$19.99</p>
                         </div>
                     </div>
                 </div>
