--- a/shop.html
+++ b/shop.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Store Template</title>
+    <title>Game Store - Store</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         body {
             background-image: url("bg.png");
@@ -42,12 +43,12 @@
 
         .card {
             border: none;
-            border-radius: 10px; /* Adjusted border-radius for slight curvature */
+            border-radius: 10px;
             transition: transform 0.3s ease;
             background: transparent;
             border: 2px solid rgba(255, 255, 255, .2);
             backdrop-filter: blur(9px);
-            margin-bottom: 20px; /* Added margin bottom for spacing */
+            margin-bottom: 20px;
         }
 
         .card:hover {
@@ -57,7 +58,7 @@
         .card-img-top {
             height: 200px;
             object-fit: cover;
-            border-radius: 10px; /* Adjusted border-radius for slight curvature */
+            border-radius: 10px;
         }
 
         .card-body {
@@ -68,12 +69,12 @@
         .card-title {
             font-size: 18px;
             font-weight: bold;
-            color: white; /* Changed color to improve visibility */
+            color: white;
         }
 
         .card-text {
             font-size: 14px;
-            color: lightgray; /* Changed color to improve visibility */
+            color: lightgray;
         }
 
         .card-price {
@@ -94,35 +95,77 @@
         }
 
         .row {
-            margin-top: 20px; /* Adjusted margin for spacing */
+            margin-top: 20px;
         }
     </style>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Game Store</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="game.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Login/login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cart.html">Cart</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="catalog">
         <div class="container">
-            <h2>Featured Games</h2>
+            <h2>Shop Games Now</h2>
             <div class="row" id="games-list">
                 <!-- Game cards will be dynamically added here -->
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
     <script>
+        // Function to add an item to the cart
+        function addToCart(title, description, price) {
+            var cartItems = JSON.parse(localStorage.getItem('cart')) || [];
+            cartItems.push({ title: title, description: description, price: price });
+            localStorage.setItem('cart', JSON.stringify(cartItems));
+            updateCartTotal();
+        }
+
+        // Function to update the cart total
+        function updateCartTotal() {
+            var cartItems = JSON.parse(localStorage.getItem('cart')) || [];
+            var cartTotal = 0;
+            cartItems.forEach(function (item) {
+                cartTotal += parseFloat(item.price.replace('$', ''));
+            });
+            document.getElementById('cart-total').textContent = '$' + cartTotal.toFixed(2);
+        }
+
         $(document).ready(function () {
             displayGames();
 
+            // Load cart total on page load
+            updateCartTotal();
+
             function displayGames() {
-                // Example games data
                 var games = [
                     { title: "GTA 5", description: "A story game with stunning graphics and immersive gameplay", price: "$15.99", image: "game1.jpg" },
                     { title: "Days Gone", description: "A survival horror zombie game with rich story and diverse character all time favorite", price: "$29.99", image: "game2.jpg" },
-                    { title: "PUBG", description: "A battle royale game with realistic physics and compitative gameplay", price: "$9.99", image: "game3.jpg" },
+                    { title: "PUBG", description: "A battle royale game with realistic physics and competitive gameplay", price: "$9.99", image: "game3.jpg" },
                     { title: "Watch Dogs", description: "An action-adventure game set in a near-future open world environment", price: "$39.99", image: "game4.jpg" },
-                    { title: "Spider Man", description: "An action-adventure game based on the Marvel Comics character Spider-Man", price: "$29.99", image: "game5.jpg" },
-                    { title: "Star Wars", description: "An epic space-opera media franchise created by George Lucas", price: "$39.99", image: "game6.jpg" }
+                    { title: "Spider Man", description: "An action-adventure game based on the Marvel Comics character Spider-Man", price: "$19.99", image: "game5.jpg" },
+                    { title: "Star Wars", description: "An epic space-opera media franchise created by George Lucas", price: "$25.99", image: "game6.jpg" }
                 ];
 
                 var gamesList = $("#games-list");
@@ -136,7 +179,7 @@
                         '<h5 class="card-title">' + game.title + '</h5>' +
                         '<p class="card-text">' + game.description + '</p>' +
                         '<p class="card-price">' + game.price + '</p>' +
-                        '<button class="card-button">Buy Now</button>' +
+                        '<button class="card-button" onclick="addToCart(\'' + game.title + '\', \'' + game.description + '\', \'' + game.price + '\')"><span class="material-icons">shopping_cart</span> Add to Cart</button>' +
                         '</div>' +
                         '</div>' +
                         '</div>';
