--- a/payment.html
+++ b/payment.html
@@ -110,17 +110,8 @@
                     <label for="email">Email Address</label>
                     <input type="email" id="email" name="email" placeholder="Enter email address" required>
                 </div>
-
-                <div class="form-group">
-                    <label>Payment Method</label><br>
-                    <input type="radio" id="credit" name="payment" value="credit" checked>
-                    <label for="credit">Credit Card</label><br>
-                    <input type="radio" id="debit" name="payment" value="debit">
-                    <label for="debit">Debit Card</label>
-                </div>
-
-                <div id="credit-card-details">
-                    <h2>Credit Card Details</h2>
+                <div id="Card-details">
+                    <h2>Card Details</h2>
                     <div class="form-group">
                         <label for="card-number">Card Number</label>
                         <input type="text" id="card-number" name="card-number" placeholder="Enter card number" required>
