--- a/cart.html
+++ b/cart.html
@@ -37,33 +37,33 @@
         .cart-item {
             margin-bottom: 10px;
             padding: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.5); /* Transparent white border */
+            border: 1px solid rgba(255, 255, 255, 0.5);
             border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.3); /* Transparent white background */
+            background-color: rgba(255, 255, 255, 0.3);
             display: flex;
             justify-content: space-between;
             align-items: center;
-            backdrop-filter: blur(5px); /* Add the glass effect */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
+            backdrop-filter: blur(5px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .cart-item-text {
             flex: 1;
-            color: white; /* Make text bright */
+            color: white;
         }
 
         .remove-button {
             background-color: transparent;
             border: none;
-            color: #ff0000; /* Red color for the button */
+            color: #ff0000;
             font-size: 14px;
             font-weight: bold;
             cursor: pointer;
-            transition: color 0.3s ease; /* Smooth transition effect for color change */
+            transition: color 0.3s ease;
         }
 
         .remove-button:hover {
-            color: #cc0000; /* Darker red color on hover */
+            color: #cc0000;
         }
 
         .cart-total {
@@ -81,6 +81,11 @@
             color: white;
             cursor: pointer;
             border-radius: 5px;
+        }
+
+        .btn-checkout:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
         }
     </style>
 </head>
@@ -111,46 +116,39 @@
         <h2>Your Cart</h2>
         <div id="cart-items"></div>
         <div class="cart-total">Total: $<span id="cart-total">0.00</span></div>
-        <button class="btn-checkout">Proceed to Checkout</button>
+        <button class="btn-checkout" id="checkoutButton" disabled>Proceed to Checkout</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
     <script>
-        // Array to store the items in the cart
         var cartItems = [];
 
-        // Function to add an item to the cart
         function addToCart(title, price) {
             cartItems.push({ title: title, price: price });
             updateCart();
         }
 
-        // Function to remove an item from the cart
         function removeFromCart(index) {
             cartItems.splice(index, 1);
             updateCart();
         }
 
-        // Function to update the cart display
         function updateCart() {
-            // Clear the existing cart display
             var cartContainer = document.getElementById('cart-items');
             cartContainer.innerHTML = '';
 
-            // Populate the cart display with the updated items
             cartItems.forEach(function (item, index) {
                 var cartItemDiv = document.createElement('div');
                 cartItemDiv.classList.add('cart-item');
 
                 var itemText = document.createElement('span');
                 itemText.classList.add('cart-item-text');
-                itemText.textContent = item.title + ' - $' + item.price; // Add dollar symbol here
+                itemText.textContent = item.title + ' - $' + item.price;
 
                 var removeButton = document.createElement('button');
-                removeButton.classList.add('remove-button'); // Add the remove-button class
-                removeButton.innerHTML = '<i class="material-icons">clear</i>'; // Add cross icon
-                // Add event listener to remove button
+                removeButton.classList.add('remove-button');
+                removeButton.innerHTML = '<i class="material-icons">clear</i>';
                 removeButton.addEventListener('click', function () {
                     removeFromCart(index);
                 });
@@ -160,16 +158,17 @@
                 cartContainer.appendChild(cartItemDiv);
             });
 
-            // Update cart total
             var cartTotal = cartItems.reduce(function (acc, curr) {
                 return acc + parseFloat(curr.price);
             }, 0);
             document.getElementById('cart-total').textContent = cartTotal.toFixed(2);
+
+            // Enable or disable checkout button based on cart items
+            var checkoutButton = document.getElementById('checkoutButton');
+            checkoutButton.disabled = cartItems.length === 0;
         }
 
-        // Load cart items on page load
         document.addEventListener('DOMContentLoaded', function () {
-            // Check if localStorage has cart items
             var storedCartItems = localStorage.getItem('cart');
             if (storedCartItems) {
                 cartItems = JSON.parse(storedCartItems);
@@ -177,18 +176,18 @@
             }
         });
 
-        // Save cart items to localStorage when the page is unloaded
         window.addEventListener('beforeunload', function () {
             localStorage.setItem('cart', JSON.stringify(cartItems));
         });
 
-        // Function to handle the click event for the "Proceed to Checkout" button
         function handleCheckout() {
-            // Redirect to the payment page
-            window.location.href = 'payment.html'; // Replace 'payment.html' with the actual path to your payment page
+            if (cartItems.length > 0) {
+                window.location.href = 'payment.html';
+            } else {
+                alert('Please add at least one item to proceed to checkout.');
+            }
         }
 
-        // Add event listener to the "Proceed to Checkout" button
         document.querySelector('.btn-checkout').addEventListener('click', handleCheckout);
     </script>
 </body>
